--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/nav_type"
-        style="@style/Nav.Status"
+        style="@style/StatusRoundedWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nav_name"
