--- a/app/src/main/res/layout/sheet_passenger.xml
+++ b/app/src/main/res/layout/sheet_passenger.xml
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -26,8 +27,7 @@
                     android:layout_height="55dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     app:srcCompat="@drawable/btn_radio_shape" />
 
                 <TextView
@@ -89,13 +89,13 @@
                         app:srcCompat="@drawable/ic_smile" />
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/imageView6"
                         style="@style/Sheet.LocationIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         app:layout_columnWeight="1"
                         app:layout_gravity="center"
-                        app:srcCompat="@drawable/ic_bookmark_outline" />
+                        app:srcCompat="@drawable/ic_currency_usd" />
 
                     <TextView
                         android:id="@+id/location_time"
@@ -116,13 +116,13 @@
                         app:layout_columnWeight="1"
                         app:layout_gravity="center" />
 
-                    <TextView
-                        style="@style/Sheet.LocationInfoText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2"
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         app:layout_columnWeight="1"
-                        app:layout_gravity="center" />
+                        app:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_credit_card" />
 
                     <TextView
                         android:id="@+id/textView30"
@@ -145,7 +145,7 @@
                         style="@style/Sheet.LocationInfoSubText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/trip_count"
+                        android:text="@string/payment"
                         app:layout_columnWeight="1"
                         app:layout_gravity="center" />
 
@@ -176,19 +176,48 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
-                <TextView
-                    android:id="@+id/request_status"
+                <RelativeLayout
+                    android:id="@+id/request_user_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Request on route sended" />
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/request_message"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    <ImageView
+                        android:id="@+id/request_user_image"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="5dp"
+                        app:srcCompat="@drawable/btn_radio_shape" />
+
+                    <TextView
+                        android:id="@+id/request_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/request_user_image"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_toEndOf="@+id/request_user_image"
+                        android:layout_weight="1"
+                        android:text="Full name" />
+
+                    <TextView
+                        android:id="@+id/request_message"
+                        style="@style/Sheet.LocationInfoMessage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/request_user_name"
+                        android:layout_alignStart="@+id/request_user_name"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginTop="4dp"
+                        android:text="Hi! Some went to Kiev?" />
+
+                </RelativeLayout>
+
 
                 <EditText
                     android:id="@+id/request_message_inp"
@@ -203,6 +232,7 @@
 
                 <Button
                     android:id="@+id/request_btn"
+                    style="@style/Sheet.SuccessBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -210,9 +240,10 @@
 
                 <Button
                     android:id="@+id/request_cancel_btn"
+                    style="@style/Sheet.CancelBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Cancel request" />
+                    android:text="@string/cancel_request" />
 
             </LinearLayout>
 
