--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="dark">#1f2534</color>
     <color name="yellow">#ffd533</color>
     <color name="dark_yellow">#ccae2a</color>
     <color name="grey">#B4B4B4</color>
