--- a/app/src/main/res/layout/sheet_route.xml
+++ b/app/src/main/res/layout/sheet_route.xml
@@ -164,57 +164,76 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/car_change_btn"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Change car"
-                android:visibility="gone" />
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Car"
-                android:textStyle="bold|italic" />
+                <ImageView
+                    android:id="@+id/car_image"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/btn_radio_shape" />
 
-            <TextView
-                android:id="@+id/car_model"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Model" />
+                <TextView
+                    android:id="@+id/car_model"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/car_image"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_toEndOf="@+id/car_image"
+                    android:layout_weight="1"
+                    android:text="Model" />
 
-            <ImageView
-                android:id="@+id/car_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/googleg_standard_color_18" />
+                <TextView
+                    android:id="@+id/car_brand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/car_model"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_toEndOf="@+id/car_model"
+                    android:layout_weight="1"
+                    android:text="Brand" />
 
-            <TextView
-                android:id="@+id/car_brand"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Brand" />
+                <TextView
+                    android:id="@+id/car_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/car_model"
+                    android:layout_alignStart="@+id/car_model"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="1"
+                    android:text="Number" />
 
-            <TextView
-                android:id="@+id/car_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Number" />
+                <Button
+                    android:id="@+id/car_change_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_weight="1"
+                    android:text="@string/change"
+                    android:visibility="visible" />
+            </RelativeLayout>
 
             <Button
                 android:id="@+id/route_action_btn"
+                style="@style/Sheet.SuccessBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:text="Run"
-                android:visibility="gone" />
+                android:text="@string/run_route"
+                android:visibility="visible" />
 
             <LinearLayout
                 android:id="@+id/request_info"
