--- a/app/src/main/res/layout/sheet_route.xml
+++ b/app/src/main/res/layout/sheet_route.xml
@@ -64,6 +64,14 @@
 
             </RelativeLayout>
 
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1.1dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="@color/message_grey_line" />
+
             <LinearLayout
                 android:id="@+id/location_info"
                 android:layout_width="match_parent"
@@ -71,14 +79,6 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:visibility="visible">
-
-                <View
-                    android:id="@+id/divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="1.5dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:background="@color/message_grey_line" />
 
                 <androidx.gridlayout.widget.GridLayout
                     android:layout_width="match_parent"
@@ -154,15 +154,15 @@
                     android:text="@string/location_update"
                     android:visibility="gone" />
 
-                <View
-                    android:id="@+id/divider2"
-                    android:layout_width="match_parent"
-                    android:layout_height="1.5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
-                    android:background="@color/message_grey_line" />
-
             </LinearLayout>
+
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="match_parent"
+                android:layout_height="1.1dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@color/message_grey_line" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -197,7 +197,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/car_model"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="6dp"
                     android:layout_marginTop="0dp"
                     android:layout_toEndOf="@+id/car_model"
                     android:layout_weight="1"
@@ -212,18 +212,33 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="0dp"
                     android:layout_weight="1"
+                    android:alpha="0.5"
                     android:text="Number" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/car_change_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_weight="1"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="9dp"
+                    android:alpha="0.3"
+                    android:background="@null"
+                    android:scaleType="fitCenter"
                     android:text="@string/change"
-                    android:visibility="visible" />
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/ic_cog_outline" />
+
             </RelativeLayout>
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="match_parent"
+                android:layout_height="1.1dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="@color/message_grey_line" />
 
             <Button
                 android:id="@+id/route_action_btn"
