--- a/app/src/main/res/layout/activity_create_new_car.xml
+++ b/app/src/main/res/layout/activity_create_new_car.xml
@@ -4,37 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_grey"
+    android:padding="10dp"
     tools:context=".CreateNewCarActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/car_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:srcCompat="@drawable/googleg_standard_color_18" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/car_image_choose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+            <ImageView
+                android:id="@+id/car_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                app:srcCompat="@drawable/default_image" />
+
+            <ImageButton
+                android:id="@+id/car_image_choose"
+                android:layout_width="40dp"
+                android:layout_height="34dp"
+                android:layout_centerInParent="true"
+                android:alpha="0.8"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:tint="@color/yellow"
+                app:srcCompat="@drawable/ic_camera" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/textView2"
+            style="@style/Form.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Brand" />
+            android:text="@string/car_brand" />
 
         <EditText
             android:id="@+id/car_brand_input"
+            style="@style/Form.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -42,12 +54,14 @@
 
         <TextView
             android:id="@+id/textView3"
+            style="@style/Form.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Model" />
+            android:text="@string/car_model" />
 
         <EditText
             android:id="@+id/car_model_input"
+            style="@style/Form.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -55,12 +69,14 @@
 
         <TextView
             android:id="@+id/textView4"
+            style="@style/Form.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Year" />
+            android:text="@string/car_year" />
 
         <EditText
             android:id="@+id/car_year_input"
+            style="@style/Form.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -68,12 +84,14 @@
 
         <TextView
             android:id="@+id/textView5"
+            style="@style/Form.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Color" />
+            android:text="@string/car_color" />
 
         <EditText
             android:id="@+id/car_color_input"
+            style="@style/Form.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -81,12 +99,14 @@
 
         <TextView
             android:id="@+id/textView6"
+            style="@style/Form.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Number" />
+            android:text="@string/car_number" />
 
         <EditText
             android:id="@+id/car_number_input"
+            style="@style/Form.Input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -96,11 +116,12 @@
 
     <Button
         android:id="@+id/car_save_btn"
+        style="@style/Form.Btn.SuccessBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="2dp"
-        android:text="Сохранить"
+        android:text="@string/save_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
